# SallyFORTH

./: .gitignore  CMakeLists.txt  driver2.cpp
include/: Sally.h
sally_files/: ifelse.sally
src/: Sally.cpp
